--- a/newbeeMall/src/main/resources/application.properties
+++ b/newbeeMall/src/main/resources/application.properties
@@ -1,5 +1,6 @@
 server.port=8080
-spring.thymeleaf.cache=false
+#½ûÓÃthymeleaf»º´æ
+spring.thymeleaf.cache=false 
 spring.datasource.name=newbee-mall-datasource
 spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/newbee_mall_db?useUnicode=true&serverTimezone=Asia/Shanghai&characterEncoding=utf8&autoReconnect=true&useSSL=false&allowMultiQueries=true
